[tool.poetry]
name = "simpleatm"
version = "0.0.1"
license = "MIT"
description = "Lightweight Python package for calculating the atmospheric transmission"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/deshima-dev/simpleatm"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
xarray = "^0.15"

[tool.poetry.dev-dependencies]
black = "^20.8b"
flake8 = "^3.8"
ipython = "^7.16"
ipykernel = "^5.3"
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
