[tool.poetry]
name = "simpleatm"
version = "0.1.0"
license = "MIT"
description = "Lightweight Python package for calculating the atmospheric transmission"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
maintainers = [
    "Yohei Togami <y.togami@a.phys.nagoya-u.ac.jp>",
    "Keiichi Matsuda <matsuda@a.phys.nagoya-u.ac.jp>",
    "Masato Hagimoto <hagimoto@a.phys.nagoya-u.ac.jp>",
]
homepage = "https://github.com/deshima-dev/simpleatm"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18"
xarray = "^0.15"

[tool.poetry.dev-dependencies]
black = "^20.8b"
flake8 = "^3.8"
ipython = "^7.16"
ipykernel = "^5.3"
netcdf4 = "^1.5"
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
